# FastAPI-Docker

./: .gitignore  README.md  docker-compose.yml  emailtest.py  minio.py  pyproject.toml
api/: databases.py  main.py  migrate_db.py  models.py
api/routers/: auth.py
api/s1/routes/: medical_staff.py
api/s2/routes/: patients.py
docker/: Dockerfile
docker/python/: Dockerfile
