[tool.poetry]
name = "app"
version = "0.1.0"
description = "Sample FastAPI App. Env is Docker."
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.109.0"
uvicorn = {extras = ["all"], version = "^0.26.0"}
boto3 = "^1.34.27"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
